# true-love-n

./: .envrc  .gitignore  readme.md  requirements.txt  true-love-n.postman_collection.json
true-love-ai/: .dockerignore  Dockerfile  base_client.py  chat_msg_handler.py  chatgpt.py  config.yaml.example  configuration.py  docker-compose.yml  ecosystem.config.js  main.py  pyproject.toml  server.py
true-love-ai/db/: migrate.py
true-love-ai/db/migrations/: 001_rename_sender_to_sender_id.sql  002_dynamic_skills_add_permissions.sql
true-love-ai/scripts/: test_video_cases.py
true-love-ai/src/true_love_ai/: __init__.py  __main__.py  base_client.py  chat_msg_handler.py  configuration.py  main.py  server.py  server_client.py
true-love-ai/src/true_love_ai/agent/: __init__.py  agent_loop.py  server_callback.py  server_client.py  skill_registry.py
true-love-ai/src/true_love_ai/api/: __init__.py  app.py  data_routes.py  deps.py  middleware.py  routes.py  skill_routes.py  trigger_routes.py
true-love-ai/src/true_love_ai/core/: __init__.py  config.py  config_http.py  config_llm.py  config_services.py  db_engine.py  logging_config.py  migrate.py  model_registry.py  session.py
true-love-ai/src/true_love_ai/llm/: __init__.py  analyze_group_prompt.py  analyze_speech_prompt.py  constants.py  function_calls.py  img_prompt.py  intent.py  llm_bootstrap.py  router.py  service.py  video_prompt.py
true-love-ai/src/true_love_ai/memory/: __init__.py  dynamic_skill_repository.py  dynamic_skill_service.py  memory_manager.py  session_repository.py  user_memory_repository.py
true-love-ai/src/true_love_ai/models/: __init__.py  dynamic_skill.py  request.py  response.py  schema_migration.py  session_message.py  user_memory.py
true-love-ai/src/true_love_ai/services/: __init__.py  audio_service.py  chat_service.py  image_service.py  search_service.py  video_service.py
true-love-ai/src/true_love_ai/skills/: __init__.py  loader.py
true-love-base/: config.yaml  config.yaml.example  configuration.py  img_cache.py  listen_chats.json  main.py  music.xml  pyproject.toml  robot.py  server.py  server_client.py  start_py.vbs  wcf_utils.py
true-love-base/adapters/: __init__.py  wxauto_adapter.py
true-love-base/core/: __init__.py  client_protocol.py  media_handler.py
true-love-base/models/: __init__.py  api.py  message.py
true-love-base/src/true_love_base/: __init__.py  __main__.py  configuration.py  main.py  server.py
true-love-base/src/true_love_base/adapters/: __init__.py  message_converter.py  wxauto_adapter.py
true-love-base/src/true_love_base/api/: __init__.py  app.py  routes.py  server.py
true-love-base/src/true_love_base/core/: __init__.py  client_protocol.py  logging_config.py  media_handler.py  trace.py  wxauto_client.py
true-love-base/src/true_love_base/models/: __init__.py  api.py  message.py  message_converter.py
true-love-base/src/true_love_base/services/: __init__.py  listen_store.py  log_service.py  robot.py  server_client.py
true-love-base/src/true_love_base/utils/: __init__.py  path_resolver.py
true-love-server/: .dockerignore  Dockerfile  asr_utils.py  base_client.py  chat_msg_handler.py  chatgpt.py  config.yaml.example  configuration.py  context_vars.py  db_engine.py  docker-compose.yml  find_gmail_verify.py  job_mgmt.py  job_process.py  main.py  mc_devices.db  mc_donald.py  msg_handler.py  msg_router.py  notice_process.py  pyproject.toml  server.py  trig_msg_handler.py  trig_remainder_handler.py  trig_search_handler.py  trig_task_handler.py
true-love-server/db/: migrate.py
true-love-server/db/migrations/: 002_multi_platform.sql
true-love-server/dbs/: group_messages.db-shm  group_messages.db-wal
true-love-server/docs/superpowers/plans/: 2026-05-11-admin-reminder-management.md
true-love-server/docs/superpowers/specs/: 2026-05-11-admin-reminder-management-design.md
true-love-server/models/: __init__.py  wx_msg.py
true-love-server/src/true_love_server/: __init__.py  __main__.py  main.py  server.py
true-love-server/src/true_love_server/api/: __init__.py  action_routes.py  app.py  deps.py  exception_handlers.py  middleware.py  routes.py
true-love-server/src/true_love_server/core/: __init__.py  configuration.py  context_vars.py  db_engine.py  logging_config.py  migrate.py
true-love-server/src/true_love_server/handlers/: __init__.py  admin_handler.py  base_handler.py  chat_handler.py  chat_msg_handler.py  image_gen_handler.py  msg_handler.py  query_handler.py  registry.py  reminder_handler.py  task_handler.py  trig_manage_handler.py  trig_remainder_handler.py  trig_search_handler.py  trig_task_handler.py
true-love-server/src/true_love_server/jobs/: __init__.py  job_mgmt.py  job_process.py
true-love-server/src/true_love_server/memory/: memory_manager.py  user_memory_repository.py
true-love-server/src/true_love_server/models/: __init__.py  chat_msg.py  group_message.py  schema_migration.py  user_memory.py
true-love-server/src/true_love_server/services/: __init__.py  ai_client.py  ai_skill_client.py  asr_utils.py  base_client.py  chat_service.py  chatgpt.py  group_message_repository.py  image_service.py  listen_manager.py  listen_store.py  log_service.py  loki_client.py  (+3 more)
true-love-server/static/: index.html  styles.css
true-love-server/static/js/: api.js  app.js  useConfirm.js  useListPage.js  useLokiLogs.js  useReminderPage.js  useSkillPage.js  useToast.js
(+82 files in other folders)
