[project]
name = "true-love-ai"
version = "0.1.0"
description = "True Love AI service"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.1.2",
    "flask-cors>=6.0.2",
    "litellm>=1.80.9",
    "pyyaml>=6.0.3",
    "requests>=2.32.5",
]

[project.scripts]
true-love-ai = "true_love_ai.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/true_love_ai"]