[project]
name = "true-love-ai"
version = "0.2.0"
description = "True Love AI service - 真爱粉 AI 服务"
requires-python = ">=3.11"
dependencies = [
    # Web 框架
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    
    # HTTP 客户端
    "httpx>=0.28.0",
    
    # LLM
    "litellm>=1.80.11",
    
    # 数据验证
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    
    # 配置
    "pyyaml>=6.0.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.0",
    "httpx>=0.28.0",  # 用于测试
]

[project.scripts]
true-love-ai = "true_love_ai.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/true_love_ai"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]
