[project]
name = "true-love-server"
version = "0.1.0"
description = "True Love Server - 真爱粉服务端"
requires-python = ">=3.12"
dependencies = [
    "apscheduler>=3.11.1",
    "bs4>=0.0.2",
    "flask>=3.1.2",
    "pillow>=11.0.0",
    "pytz>=2025.2",
    "pyunit-time>=2024.7.3",
    "pyyaml>=6.0.3",
    "requests>=2.32.5",
    "schedule>=1.2.2",
]

[project.scripts]
true-love-server = "true_love_server.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/true_love_server"]

[tool.hatch.build]
sources = ["src"]

[tool.pyright]
extraPaths = ["src"]
